--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,5 +1,5 @@
 # Uncomment this line to define a global platform for your project
-# platform :ios, '12.0'
+platform :ios, '13.0'
 
 # CocoaPods analytics sends network stats synchronously affecting flutter build latency.
 ENV['COCOAPODS_DISABLE_STATS'] = 'true'
@@ -39,5 +39,31 @@ end
 post_install do |installer|
   installer.pods_project.targets.each do |target|
     flutter_additional_ios_build_settings(target)
+    
+    # --- PERMISSION HANDLER SETUP ---
+    # This enables the specific permission logic in the binary.
+    # Without this, the permission requests fail silently.
+    target.build_configurations.each do |config|
+      config.build_settings['GCC_PREPROCESSOR_DEFINITIONS'] ||= [
+        '$(inherited)',
+        
+        # Enable Camera
+        'PERMISSION_CAMERA=1',
+        
+        # Enable Microphone (Required if video recording is involved)
+        'PERMISSION_MICROPHONE=1',
+        
+        # Enable Photos (Saving receipts/Uploading)
+        'PERMISSION_PHOTOS=1',
+        
+        # Enable App Tracking Transparency (ATT)
+        'PERMISSION_APP_TRACKING_TRANSPARENCY=1',
+        
+        # Enable Bluetooth (Thermal Printers)
+        'PERMISSION_BLUETOOTH=1',
+      ]
+    end
+    # --------------------------------
+    
   end
 end
