--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   share_plus: ^12.0.1
   pdf: ^3.11.3
   flutter_launcher_icons: ^0.14.4
+  image_picker: ^1.2.1
 
 dev_dependencies:
   flutter_test:
