--- a/ios/Runner/Info.plist
+++ b/ios/Runner/Info.plist
@@ -75,7 +75,7 @@
 
     <key>BGTaskSchedulerPermittedIdentifiers</key>
     <array>
-        <string>lhdn.myinvois.epos.backgroundtask</string>
+        <string>lhdn.myinvois.epos.preprod.backgroundtask</string>
     </array>
 
     <key>NSAppTransportSecurity</key>
